# objectiv-analytics-main

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  docker-compose-dev.yaml  docker-compose.yaml
bach/: .gitignore  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pytest.ini  setup.cfg  setup.py
bach/.secrets/: .gitignore  .test_env.sample
bach/bach/: __init__.py  dataframe.py  expression.py  from_database.py  from_pandas.py  indexing.py  merge.py  partitioning.py  plotting.py  py.typed  quantile.py  sample.py  savepoints.py  sql_model.py  types.py  types_bq.py  utils.py
bach/bach/display_formats/: __init__.py  graph_display.py  markdown_display.py
bach/bach/operations/: concat.py  cut.py  describe.py  value_propagation.py
bach/bach/preprocessing/: scalers.py
bach/bach/series/: __init__.py  series.py  series_boolean.py  series_datetime.py  series_dict.py  series_json.py  series_list.py  series_multi_level.py  series_numeric.py  series_string.py  series_uuid.py
bach/bach/series/array_operations/: flattening.py
bach/bach/series/utils/: datetime_formats.py
bach/docs/: .gitignore  Makefile  README.md  requirements.txt
bach/docs/source/: conf.py  get-started-in-your-notebook.rst  index.rst
bach/docs/source/_ext/: linkcode.py
bach/docs/source/bach/: core-concepts.rst  data-stores.rst  examples.rst  index.rst
bach/docs/source/example-notebooks/: explore-data.rst  feature-engineering.rst  feature-importance.rst  funnel-discovery.rst  index.rst  logistic-regression.rst  machine-learning.rst  marketing-analytics.rst  modelhub-basics.rst  open-taxonomy.rst  product-analytics.rst  user-intent.rst
bach/docs/source/open-model-hub/: identity-resolution.rst  index.rst  version-check.rst
bach/sql_models/: README.md  cli_util.py  constants.py  graph_operations.py  model.py  py.typed  sql_generator.py  sql_query_parser.py  util.py
bach/tests/: athena-setup-test-db.md  conftest.py
bach/tests/functional/bach/: test_bt_custom_types.py  test_cut.py  test_data_and_utils.py  test_df.py  test_df_append.py  test_df_astype.py  test_df_database_create.py  test_df_describe.py  test_df_drop_duplicates.py  test_df_dropna.py  test_df_fillna.py  test_df_from.py  test_df_from_pandas.py  test_df_get_dummies.py  test_df_getitem.py  test_df_groupby.py  test_df_indexing.py  test_df_materialize.py  test_df_merge.py  test_df_plot.py  test_df_rename.py  test_df_reset_index.py  test_df_sample.py  test_df_savepoints.py  test_df_scale.py  test_df_setitem.py  test_df_sort_index.py  test_df_sort_values.py  test_df_stack.py  test_df_unstack.py  test_df_value_counts.py  (+28 more)
bach/tests/unit/: __init__.py
backend/: .dockerignore  .gitignore  CONFIGURATION.md  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
backend/docker/: Dockerfile  entry_point.sh  gunicorn.conf.py
backend/objectiv_backend/: __init__.py  app.py  create_tables.sql  wsgi.py
backend/objectiv_backend/common/: config.py  db.py  event_utils.py  types.py
backend/objectiv_backend/end_points/: collector.py  common.py  extra_output.py  schema.py
backend/objectiv_backend/schema/: .gitignore  event_schemas.py  generate_classes.py  generate_json_schema.py  hydrate_events.py  schema.py  schema_utils.py  validate_events.py
backend/objectiv_backend/snowplow/: generate_iglu_schema.py  snowplow_helper.py
backend/objectiv_backend/tools/: pg_to_sp.py
backend/objectiv_backend/workers/: pg_queues.py  pg_storage.py  util.py  worker_entry.py  worker_finalize.py  workers.py
backend/tests/collector/: schema_violations.json  test_collector.py  test_snowplow.py
backend/tests/schema/: test_event_schema.py  test_schema.py
modelhub/: .gitignore  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pytest.ini  setup.cfg
modelhub/.secrets/: .gitignore
modelhub/modelhub/: __init__.py  aggregate.py  decorators.py  map.py  metrics.py  modelhub.py  py.typed  util.py
modelhub/modelhub/models/: __init__.py  funnel_discovery.py  logistic_regression.py
modelhub/modelhub/pipelines/: __init__.py  base_pipeline.py  extracted_contexts.py  identity_resolution.py  sessionized_data.py  util.py
modelhub/modelhub/series/: __init__.py  series_objectiv.py
modelhub/tests_modelhub/: conftest.py
modelhub/tests_modelhub/checklock_holmes/: .env_sample  .gitignore  Makefile  README.md  checklock-holmes.py  mypy.ini  requirements.txt  setup.cfg
modelhub/tests_modelhub/data_and_utils/: data_json_real.py  data_objectiv.py  utils.py
modelhub/tests_modelhub/functional/: conftest.py
modelhub/tests_modelhub/version_checker/: test_client.py
modelhub/version_checker/: Makefile  app.py  docker-compose.yaml  requirements.txt  wsgi.py
modelhub/version_checker/docker/: Dockerfile  entry_point.sh  nginx.conf
(+747 files in other folders)
