[metadata]
name = objectiv-bach
version = attr: bach.__version__
author = Objectiv B.V.
author_email = hi@objectiv.io
description = Objectiv Bach provides Pandas-like DataFrames backed by SQL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/objectiv/objectiv-analytics/
project_urls =
    Documentation = https://objectiv.io/docs
    Bug Tracker = https://github.com/objectiv/objectiv-analytics/issues
license = Apache License 2.0
license_files =
   LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
# TODO: set to production when ready
    Development Status :: 4 - Beta

[options]
install_requires =
    # sqlalchemy-bigquery is very specific about the following two deps. List them first to avoid pip getting confused
    sqlalchemy<=1.4.27
    pyarrow<7.0dev
    psycopg2-binary
    pandas>=1.3.1
    sqlparse

python_requires = >=3.7
packages = find:
include_package_data = True

[options.extras_require]
bigquery = 
    sqlalchemy-bigquery
    google-cloud-bigquery-storage
athena =
    pyathena>=2.10.0
dev = 
    pytest==6.2.5
    pytest-xdist==2.5.0
    pytest-timeout==2.1.0
    mypy==0.910
    pycodestyle==2.7.0
    ipython==7.31.1
    matplotlib==3.5.1
    scikit-learn==1.0.2
    python-dotenv==0.20.0
    graphviz==0.20.1

[options.packages.find]
where = .
exclude = tests, tests.*

[options.package_data]
* = py.typed

[pycodestyle]
count = True
max-line-length = 110
statistics = True
