[metadata]
name = objectiv-backend
version = attr: objectiv_backend.__version__
author = Objectiv
author_email = thijs@objectiv.io
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
# TODO
#url = https://github.com/pypa/sampleproject
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
#    License :: OSI Approved :: TODO
    Operating System :: OS Independent
# TODO: set to production when ready
    Development Status :: 4 - Beta

[options]
install_requires =
    boto3
    jsonschema
    flask
    flask-cors
    psycopg2-binary
python_requires = >=3.7
packages = find:
include_package_data = True
[options.packages.find]
where = .
exclude = tests, tests.*
[options.package_data]
# Include non-python files:
#  * VERSION: read in __init__.py to determine the version number
#  * create_tables.sql: read in objectiv_backend/tools/db_init/db_init.py
objectiv_backend = VERSION, create_tables.sql
objectiv_backend.schema = base_schema.json5, event_list.json5

[options.entry_points]
console_scripts =
    objectiv-workers = objectiv_backend.workers.workers:main
    objectiv-validate-events = objectiv_backend.schema.validate_events:main
    objectiv-generate-json-schema = objectiv_backend.schema.generate_json_schema:main
    objectiv-db-init = objectiv_backend.tools.db_init.db_init:main
