[metadata]
name = objectiv-modelhub
version = attr: modelhub.__version__
author = Objectiv B.V.
author_email = hi@objectiv.io
description = The open model hub is a growing collection of data models that you can take, combine and run for product analysis and exploration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/objectiv/objectiv-analytics/
project_urls =
    Documentation = https://objectiv.io/docs
    Bug Tracker = https://github.com/objectiv/objectiv-analytics/issues
license = Apache License 2.0
license_files =
   LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
# TODO: set to production when ready
    Development Status :: 4 - Beta

[options]
install_requires =
    # sqlalchemy-bigquery (through objectiv-bach) is very specific about the following two deps. List them first to avoid pip getting confused
    sqlalchemy<=1.4.27
    pyarrow<7.0dev
    objectiv-bach[bigquery] ==0.0.22
    requests
    matplotlib
    seaborn
    plotly
    # sklearn requires wheel to properly install
    wheel
    sklearn
    typing-extensions
python_requires = >=3.7
packages = find:
include_package_data = True
[options.packages.find]
where = .
exclude = tests_modelhub, tests_modelhub.*

[options.extras_require]
dev = 
    mypy==0.910
    pycodestyle==2.7.0
    # Tests runners
    pytest==6.2.5
    pytest-env
    # Used for multi-process testing, and communication between these processes
    pytest-xdist==2.5.0
    filelock==3.7.1
    # Types used by mypy
    types-requests

[options.package_data]
* = py.typed

[pycodestyle]
count = True
max-line-length = 110
statistics = True
